--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/bhaskarpandey1234/personalPortfolio.git",
+  "homepage": "https://bhaskarpandey1234.github.io/personalPortfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
